--- a/Src/Even.Tests/packages.config
+++ b/Src/Even.Tests/packages.config
@@ -4,13 +4,14 @@
   <package id="Akka.TestKit" version="1.0.4" targetFramework="net46" />
   <package id="Akka.TestKit.Xunit2" version="1.0.4" targetFramework="net46" />
   <package id="DBHelpers" version="1.1.0.0" targetFramework="net46" />
-  <package id="MySql.Data" version="6.9.7" targetFramework="net46" />
+  <package id="MySql.Data" version="6.9.8" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net46" />
-  <package id="NSubstitute" version="1.8.2.0" targetFramework="net46" />
-  <package id="xunit" version="2.0.0" targetFramework="net46" />
+  <package id="NSubstitute" version="1.9.2.0" targetFramework="net46" />
+  <package id="xunit" version="2.1.0" targetFramework="net46" />
   <package id="xunit.abstractions" version="2.0.0" targetFramework="net46" />
-  <package id="xunit.assert" version="2.0.0" targetFramework="net46" />
-  <package id="xunit.core" version="2.0.0" targetFramework="net46" />
-  <package id="xunit.extensibility.core" version="2.0.0" targetFramework="net46" />
-  <package id="xunit.runner.visualstudio" version="2.0.1" targetFramework="net46" />
+  <package id="xunit.assert" version="2.1.0" targetFramework="net46" />
+  <package id="xunit.core" version="2.1.0" targetFramework="net46" />
+  <package id="xunit.extensibility.core" version="2.1.0" targetFramework="net46" />
+  <package id="xunit.extensibility.execution" version="2.1.0" targetFramework="net46" />
+  <package id="xunit.runner.visualstudio" version="2.1.0" targetFramework="net46" />
 </packages>
