Changes to how the stream is identified inside Even. This removes some "weirdness" of using regular names to identity streams but using hex encoded strings to identify projections.

--- a/Src/Even/Even.csproj
+++ b/Src/Even/Even.csproj
@@ -100,6 +100,7 @@
     <Compile Include="ReadWorkers.cs" />
     <Compile Include="RejectReason.cs" />
     <Compile Include="StreamEventReader.cs" />
+    <Compile Include="Stream.cs" />
     <Compile Include="SystemClock.cs" />
     <Compile Include="Timeout.cs" />
     <Compile Include="Utils\BatchStringBuilder.cs" />
