--- a/Src/Even.Sample/App.config
+++ b/Src/Even.Sample/App.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <section name="akka" type="Akka.Configuration.Hocon.AkkaConfigurationSection, Akka"/>
@@ -17,6 +17,6 @@
     </hocon>
   </akka>
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/>
   </startup>
 </configuration>
