--- a/Src/Even/Even.csproj
+++ b/Src/Even/Even.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Even</RootNamespace>
     <AssemblyName>Even</AssemblyName>
-    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -65,6 +66,8 @@
     <Compile Include="IndexedProjectionStreamReader.cs" />
     <Compile Include="IndexSequenceEntry.cs" />
     <Compile Include="EventDispatcher.cs" />
+    <Compile Include="Internals\CollectionExtensions.cs" />
+    <Compile Include="Internals\Unit.cs" />
     <Compile Include="IPersistedEvent.cs" />
     <Compile Include="IPersistedStreamEvent.cs" />
     <Compile Include="Messages\CommandProcessorMessages.cs" />
