--- a/Src/Even/Even.csproj
+++ b/Src/Even/Even.csproj
@@ -92,6 +92,7 @@
     <Compile Include="Aggregate.cs" />
     <Compile Include="AggregateSupervisor.cs" />
     <Compile Include="AkkaAsyncHelper.cs" />
+    <Compile Include="Properties\AssemblyInfo.custom.cs" />
     <Compile Include="Query.cs" />
     <Compile Include="ProjectionSupervisor.cs" />
     <Compile Include="QueryExtensions.cs" />
