--- a/Src/Even.Persistence.Sql/Even.Persistence.Sql.csproj
+++ b/Src/Even.Persistence.Sql/Even.Persistence.Sql.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="BaseSqlStore.cs" />
     <Compile Include="MySqlStore.cs" />
+    <Compile Include="Properties\AssemblyInfo.custom.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlServer2012Store.cs" />
   </ItemGroup>
@@ -75,7 +76,7 @@
     </When>
   </Choose>
   <Choose>
-    <When Condition="$(TargetFrameworkIdentifier) == '.NETFramework' And ($(TargetFrameworkVersion) == 'v4.5.1' Or $(TargetFrameworkVersion) == 'v4.5.2' Or $(TargetFrameworkVersion) == 'v4.5.3' Or $(TargetFrameworkVersion) == 'v4.6' Or $(TargetFrameworkVersion) == 'v4.6.1')">
+    <When Condition="$(TargetFrameworkIdentifier) == '.NETFramework' And ($(TargetFrameworkVersion) == 'v4.5' Or $(TargetFrameworkVersion) == 'v4.5.1' Or $(TargetFrameworkVersion) == 'v4.5.2' Or $(TargetFrameworkVersion) == 'v4.5.3' Or $(TargetFrameworkVersion) == 'v4.6' Or $(TargetFrameworkVersion) == 'v4.6.1')">
       <ItemGroup>
         <Reference Include="DBHelpers">
           <HintPath>..\..\packages\DBHelpers\lib\net45\DBHelpers.dll</HintPath>
