Nuget package creation works too after applying attributes to skip some failing tests

--- a/Src/Even/Even.csproj
+++ b/Src/Even/Even.csproj
@@ -125,6 +125,7 @@
     <None Include="app.config" />
     <None Include="Even.nuspec" />
     <None Include="paket.references" />
+    <None Include="paket.template" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
