--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,8 +5,8 @@ build_script:
 test: off
 version: 0.0.2.{build}
 artifacts:
-  - path: temp\TestResults\*.*
+  - path: '**\temp\TestResults\*.*
     name: testResults
 
-  - path: bin\**\*.nupkg
+  - path: '**\bin\**\*.nupkg'
     name: bin
