--- a/Src/Even/paket.template
+++ b/Src/Even/paket.template
@@ -1,8 +1,8 @@
 ﻿type project
 owners
-    nvivo
+    nvivo, DamReev
 authors 
-    nvivo
+    nvivo, DamReev
 projectUrl
     http://github.com/EvenDotNet/Even
 iconUrl
@@ -20,4 +20,4 @@ summary
 description
     Even is experimental event sourcing framework built on top of Akka.NET.
 dependencies
-  Akka LOCKEDVERSION
+  Akka >= LOCKEDVERSION
