--- a/Src/Even/Even.csproj
+++ b/Src/Even/Even.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Internals\Unit.cs" />
     <Compile Include="IPersistedEvent.cs" />
     <Compile Include="IPersistedStreamEvent.cs" />
+    <Compile Include="IProjectionStore.cs" />
     <Compile Include="Messages\CommandProcessorMessages.cs" />
     <Compile Include="Messages\EventProcessorMessages.cs" />
     <Compile Include="Messages\EventReadMessages.cs" />
@@ -70,8 +71,9 @@
     <Compile Include="Messages\IRequest.cs" />
     <Compile Include="Options.cs" />
     <Compile Include="PersistedEventFactory.cs" />
+    <Compile Include="PersistentProjection.cs" />
     <Compile Include="ProjectionCheckpointWriter.cs" />
-    <Compile Include="ProjectionEvent.cs" />
+    <Compile Include="ProjectionEventFactory.cs" />
     <Compile Include="ProjectionIndexWriter.cs" />
     <Compile Include="MessageHandler.cs" />
     <Compile Include="CommandProcessor.cs" />
