--- a/.gitignore
+++ b/.gitignore
@@ -187,3 +187,8 @@ docs/content/license.md
 docs/content/release-notes.md
 .fake
 docs/tools/FSharp.Formatting.svclog
+.user[Ss]ettings/
+
+# DNX
+project.lock.json
+artifacts/
