--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,12 +1,12 @@
 init:
   - git config --global core.autocrlf input
 build_script:
-  - cmd: build.cmd NuGet
+  - cmd: build.ps1
 test: off
-version: 0.0.2.{build}
+version: 0.0.3.{build}
 artifacts:
   - path: '**\temp\TestResults\*.*'
     name: testResults
 
-  - path: '**\bin\**\*.nupkg'
-    name: bin
+  - path: 'artifacts\**\*.nupkg'
+    name: packages
