--- a/Src/Even/project.json
+++ b/Src/Even/project.json
@@ -1,16 +1,11 @@
 {
-    "version": "0.3.0-alpha1-*",
-    "description": "Even is an experimental event sourcing framework built on top of Akka.NET.",
-    "authors": [ "nvivo", "DamReev" ],
-    "tags": [ "Even","Event","Event Sourcing", "Akka", "Akka.NET" ],
-    "projectUrl": "http://github.com/EvenDotNet/Even",
-    "licenseUrl": "http://github.com/EvenDotNet/Even/blob/master/LICENSE.txt",
-    "iconUrl": "https://raw.githubusercontent.com/EvenDotNet/Even/master/docs/files/img/logo.png",
-
-    "frameworks": {
-        "net451": { }
-    },
-    "dependencies": {
-        "Akka": "1.0.6"
-    }
+  "dependencies": {
+    "Akka": "1.0.8"
+  },
+  "frameworks": {
+    "net451": { }
+  },
+  "runtimes": {
+    "win": ""
+  }
 }
