--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,12 +1,11 @@
 init:
   - git config --global core.autocrlf input
 build_script:
-  - cmd: build.ps1
-test: off
-version: 0.0.3.{build}
+  - cmd: build.bat Package
+test: off  
 artifacts:
-  - path: '**\temp\TestResults\*.*'
+  - path: '.build\**\testResults\*testResults.xml'
     name: testResults
 
-  - path: 'artifacts\**\*.nupkg'
+  - path: '.build\artifacts\**\*.nupkg'
     name: packages
