--- a/Src/Even/Even.nuspec
+++ b/Src/Even/Even.nuspec
@@ -17,6 +17,6 @@
   </metadata>
 
     <files>
-        <file src="bin\**\Even.*" target="lib\net451" />
+        <file src="bin\$configuration$\Even.*" target="lib\net451" />
     </files>
 </package>
