Removed unnecessary nuget package

--- a/Src/Even.Persistence.SQLite/project.json
+++ b/Src/Even.Persistence.SQLite/project.json
@@ -1,6 +1,6 @@
 ﻿{
   "dependencies": {
-    "System.Data.SQLite": "1.0.102"
+    "System.Data.SQLite.Core": "1.0.102"
   },
   "frameworks": {
     "net451": {}
